Fixed banner spacing in index.html

--- a/css/style.css
+++ b/css/style.css
@@ -329,3 +329,8 @@ a:hover {
     height: 2000px;
     top: 0;
 }
+
+.banner-spacer {
+    width: 3em;
+    display: inline-block;
+}
